# nncombinator

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASES.md  build.rs  kernel.bat
data/penguins/testing/: penguins_lter.csv
data/penguins/training/: penguins_lter.csv
data/weather/testing/: weather.csv
data/weather/training/: weather.csv
src/: activation.rs  arr.rs  collection.rs  computational_graph.rs  device.rs  error.rs  kernel.cu  layer.rs  lib.rs  list.rs  lossfunction.rs  macros.rs  mem.rs  ope.rs  optimizer.rs  persistence.rs
src/cuda/: ffi.rs  mem.rs  mod.rs
src/cuda/cudnn/: mod.rs  tensor.rs
src/cuda/kernel/: activation.rs  device.rs  lossfunction.rs  mod.rs  optimizer.rs
src/device/: activation.rs  batchnormalization.rs  bias.rs  input.rs  linear.rs  mod.rs  output.rs
src/layer/: activation.rs  batchnormalization.rs  bias.rs  bridge.rs  input.rs  linear.rs  mod.rs  output.rs
src/layer/batch_norm/: mod.rs
tests/: batchnormalization.rs  lib.rs
tests/batchnormalization/: mod.rs
tests/common/: mod.rs
tests/cuda/: mod.rs
