[package]
name = "nncombinator"
version = "0.1.0"
authors = ["jinpu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "A library of neural networks that can be written type-safely"
documentation = "https://docs.rs/nncombinator/"
homepage = "https://crates.io/crates/nncombinator"
repository = "https://github.com/j6k1/nncombinator"
readme = "README.md"

keywords = ["neural-network","machine-learning","numeric-calculation"]
categories = ["mathematics","science"]
license = "MIT"

[dependencies]
num-traits = "0.2.14"
[dev-dependencies]
rand = "0.8.5"
rand_xorshift = "0.3.0"
statrs = "0.15.0"
rand_distr = "0.4.3"
[profile.test]
opt-level = 3
