[package]
name = "nncombinator"
version = "0.7.0"
authors = ["jinpu <nanasi18@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "A library of neural networks that can be written type-safely"
documentation = "https://docs.rs/nncombinator/"
homepage = "https://crates.io/crates/nncombinator"
repository = "https://github.com/j6k1/nncombinator"
readme = "README.md"

keywords = ["neural-network","machine-learning","numeric-calculation"]
categories = ["mathematics","science"]
license = "MIT"

build = "build.rs"
[dependencies]
num-traits = "0.2.14"
rayon = "1.5.1"
libc = "0.2"
cuda-runtime-sys = "0.3.0-alpha.1"
rcudnn = "1.8.0"
rcudnn-sys = "0.5.0"
rcublas = "0.6.0"
rcublas-sys = "0.5.0"
[dev-dependencies]
rand = "0.8.5"
rand_xorshift = "0.3.0"
statrs = "0.15.0"
rand_distr = "0.4.3"
csv = "1.1.6"
lazy_static = "1.4.0"
image = "0.24.4"
mnist = "0.5.0"
[build-dependencies]
cc = "1.0.73"
[profile.test]
opt-level = 3
